<resources>
    <string name="app_name">HomeworkAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">TIME</string>
    <string name="details">Details</string>
    <string name="porsche">Porsche</string>
    <string name="cars">Cars</string>
    <string name="description">DESCRIPTION</string>
    <string name="login_app">LOGIN APP</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter">ENTER</string>
    <string name="information">Information</string>
    <string name="welcome_back">Welcome back!!!</string>
    <string name="try_again_enter_login_password">Try again to enter the login and password</string>
    <string name="try_registering_again">Try registering again</string>
    <string name="successful_registration">Successful registration</string>
    <string name="registration">Registration</string>
    <string name="imageView_clicked">ImageView clicked</string>
    <string name="login_app1">LOGIN APP</string>
    <string name="go_to_itemsfragment">Go To ItemsFragment</string>
    <string name="welcome_onboardingfragment">Welcome OnBoardingFragment</string>
    <string name="welcome_homefragment">Welcome HomeFragment</string>
    <string name="go_to_onboarding">Go To OnBoarding</string>
    <string name="exit">Exit</string>
    <string name="logout">LOGOUT</string>
    <string name="login_error">login error</string>
    <string name="password_entry_error">password entry error</string>
    <string name="show_creads">Show Creads</string>
</resources>