<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_6"
    tools:context=".RegistrationFragment">

    <EditText
        android:id="@+id/et_text3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/royal_blue"
        android:hint="@string/enter_your_login"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:maxLines="10"
        android:minLines="3"
        android:paddingStart="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_text4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/royal_blue"
        android:hint="@string/enter_your_password"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:maxLines="8"
        android:minLines="4"
        android:paddingStart="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:background="@color/royal_blue"
        android:backgroundTint="@color/royal_blue"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text4"
        app:layout_constraintVertical_bias="0.956" />


</androidx.constraintlayout.widget.ConstraintLayout>